# Game_Tech_Assignment1

./: .OgreFramework.cpp.swp  Makefile  Makefile.am  Makefile.in  OgreApp  OgreDemo.cpp  OgreDemo.hpp  OgreFramework.cpp  OgreFramework.hpp  README  buildit  config.status  configure  configure.ac  libtool  main.cpp  makeit  plugins.cfg  project_description.txt  resources.cfg
.deps/: OgreApp-OgreDemo.Po  OgreApp-OgreFramework.Po  OgreApp-main.Po
Bullet/src/: Makefile  cmake_install.cmake
Bullet/src/BulletCollision/: Makefile  cmake_install.cmake
Bullet/src/BulletDynamics/: Makefile  cmake_install.cmake
Bullet/src/BulletSoftBody/: Makefile  cmake_install.cmake
Bullet/src/LinearMath/: Makefile  cmake_install.cmake
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
